--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(Vulkan REQUIRED)
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 set (VKMMC_SHADERS_DIRECTORY "${PROJECT_SOURCE_DIR}/assets/shaders")
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 add_subdirectory(thirdparty)
 add_subdirectory(code)
@@ -43,3 +44,4 @@ add_custom_target(
     Shaders 
     DEPENDS ${SPIRV_BINARY_FILES}
     )
+set_property(TARGET Shaders PROPERTY FOLDER "Assets")
