--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,12 +26,15 @@ file(GLOB_RECURSE GLSL_SOURCE_FILES
     "${VKMMC_SHADERS_DIRECTORY}/*.frag"
     "${VKMMC_SHADERS_DIRECTORY}/*.vert"
     "${VKMMC_SHADERS_DIRECTORY}/*.comp"
+    "${VKMMC_SHADERS_DIRECTORY}/*/*.frag"
+    "${VKMMC_SHADERS_DIRECTORY}/*/*.vert"
+    "${VKMMC_SHADERS_DIRECTORY}/*/*.comp"
     )
 
 foreach(GLSL ${GLSL_SOURCE_FILES})
   message(STATUS "BUILDING SHADER")
   get_filename_component(FILE_NAME ${GLSL} NAME)
-  set(SPIRV "${VKMMC_SHADERS_DIRECTORY}/${FILE_NAME}.spv")
+  set(SPIRV "${VKMMC_SHADERS_DIRECTORY}/compiled/${FILE_NAME}.spv")
   message(STATUS ${GLSL})
   add_custom_command(
     OUTPUT ${SPIRV}
