--- a/assets/scenes/Scene.yaml
+++ b/assets/scenes/Scene.yaml
@@ -1,42 +1,52 @@
-- RenderObject: 0
-  Name: RenderObject_0
-  Parent: 4294967295
-  TransformComponent:
-    Position: [0, 0, 0]
-    Rotation: [0, 0, 0]
-    Scale: [1, 1, 1]
-- RenderObject: 1
-  Name: Mesh_0
-  Parent: 0
-  TransformComponent:
-    Position: [0, 0, 0]
-    Rotation: [0, -0, 0]
-    Scale: [0.00800000038, 0.00800000038, 0.00800000038]
-  MeshComponent:
-    MeshAssetPath: ../assets/models/sponza/sponzatest/Sponzatest.gltf
-    MeshName: Mesh_0
-- RenderObject: 2
-  Name: Cube
-  Parent: 0
-  TransformComponent:
-    Position: [0, 0, 0]
-    Rotation: [0, -0, 0]
-    Scale: [1, 1, 1]
-  MeshComponent:
-    MeshAssetPath: ../assets/models/sponza/sponzatest/Sponzatest.gltf
-    MeshName: Cube
-- RenderObject: 3
-  Name: Light
-  Parent: 0
-  TransformComponent:
-    Position: [0, 0, 0]
-    Rotation: [0, 0, 0]
-    Scale: [1, 1, 1]
-  LightComponent:
-    Type: Spot
-    Color: [1, 0, 0]
-    Radius: 10
-    Compression: 10
-    InnerCutoff: 1
-    OuterCutoff: 0.5
-    ProjectShadows: false
+Environment:
+  Skybox: 
+    - ../assets/textures/Lycksele3/posz.jpg
+    - ../assets/textures/Lycksele3/negz.jpg
+    - ../assets/textures/Lycksele3/posx.jpg
+    - ../assets/textures/Lycksele3/negx.jpg
+    - ../assets/textures/Lycksele3/posy.jpg
+    - ../assets/textures/Lycksele3/negy.jpg
+  Ambient: [0.02, 0.05, 0.1]
+RenderObjects:
+  - RenderObject: 0
+    Name: RenderObject_0
+    Parent: 4294967295
+    TransformComponent:
+      Position: [0, 0, 0]
+      Rotation: [0, 0, 0]
+      Scale: [1, 1, 1]
+  - RenderObject: 2
+    Name: Mesh_0
+    Parent: 0
+    TransformComponent:
+      Position: [0, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [0.00800000038, 0.00800000038, 0.00800000038]
+    MeshComponent:
+      MeshAssetPath: ../assets/models/sponza/sponzatest/Sponzatest.gltf
+      MeshName: Mesh_0
+  - RenderObject: 3
+    Name: Cube
+    Parent: 0
+    TransformComponent:
+      Position: [0, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    MeshComponent:
+      MeshAssetPath: ../assets/models/sponza/sponzatest/Sponzatest.gltf
+      MeshName: Cube
+  - RenderObject: 4
+    Name: Light
+    Parent: 0
+    TransformComponent:
+      Position: [3, 1.5, 0]
+      Rotation: [0, 1.29999995, 0]
+      Scale: [1, 1, 1]
+    LightComponent:
+      Type: Spot
+      Color: [0.93007493, 1, 0.524509788]
+      Radius: 10
+      Compression: 10
+      InnerCutoff: 1
+      OuterCutoff: 0.800000012
+      ProjectShadows: false
