--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,10 @@ build/*
 *.pdb
 *.idb
 *.ini
+thirdparty/imgui/**.md
+thirdparty/imgui/**.png
+thirdparty/imgui/examples/*
+thirdparty/imgui/docs/*
+thirdparty/imgui/.github/*
+
 VulkanRender/*
