--- a/assets/default.cfg
+++ b/assets/default.cfg
@@ -1,16 +1,16 @@
 
-WindowWidth = 1280
-WindowHeight = 720
+#WindowWidth = 1280
+#WindowHeight = 720
 
 #WindowX = 0
 #WindowY = 150
 
-ShowConsole = true
+#ShowConsole = 1
 
 #r_showcpuprof = true
 #r_showgpuprof = true
 #r_forceshaderrecompilation = true
-r_showforwardtech = true
+#r_showforwardtech = true
 
 
-ExitValidationLayer = false
+#ExitValidationLayer = false
