--- a/assets/default.cfg
+++ b/assets/default.cfg
@@ -2,8 +2,8 @@
 #WindowWidth = 1280
 #WindowHeight = 720
 
-#WindowX = 0
-#WindowY = 150
+#WindowX = 1920
+#WindowY = 0
 
 #ShowConsole = 1
 
@@ -14,3 +14,6 @@
 
 
 #ExitValidationLayer = false
+
+g_LoadScene = scenes/emissive.yaml
+
