--- a/assets/default.cfg
+++ b/assets/default.cfg
@@ -1,11 +1,18 @@
 
 #WindowWidth = 1280
 #WindowHeight = 720
+WindowWidth = 1920
+WindowHeight = 1080
+#WindowWidth = 2560
+#WindowHeight = 1440
+Fullscreen = true
 
-#WindowX = 1920
+#WindowX = -1920
 #WindowY = 0
+#WindowX = 10
+WindowY = 30
 
-#ShowConsole = 1
+ShowConsole = 1
 
 #r_showcpuprof = true
 #r_showgpuprof = true
@@ -13,7 +20,12 @@
 #r_showforwardtech = true
 
 
-#ExitValidationLayer = false
+#r_exitValidationLayer = false
+r_enableValidationLayer = false
 
-g_LoadScene = scenes/emissive.yaml
+#g_LoadScene = scenes/emissive.yaml
+#g_LoadScene = scenes/vkscene.yaml
+#g_LoadScene = scenes/sponza.yaml
+g_LoadScene = scenes/bistro.yaml
+#g_LoadScene = scenes/empty.yaml
 
