testing new render system

--- a/assets/default.cfg
+++ b/assets/default.cfg
@@ -5,7 +5,7 @@ WindowWidth = 1920
 WindowHeight = 1080
 #WindowWidth = 2560
 #WindowHeight = 1440
-Fullscreen = true
+#Fullscreen = true
 
 #WindowX = -1920
 #WindowY = 0
@@ -21,7 +21,7 @@ ShowConsole = 1
 
 
 #r_exitValidationLayer = false
-r_enableValidationLayer = false
+#r_enableValidationLayer = false
 
 #g_LoadScene = scenes/emissive.yaml
 #g_LoadScene = scenes/vkscene.yaml
