--- a/assets/default.cfg
+++ b/assets/default.cfg
@@ -1,31 +1,56 @@
 
+###################################
+### Resolutions
+###################################
 #WindowWidth = 1280
 #WindowHeight = 720
+#WindowWidth = 1600
+#WindowHeight = 900
 WindowWidth = 1920
 WindowHeight = 1080
 #WindowWidth = 2560
 #WindowHeight = 1440
+
+
+###################################
+### Window mode
+###################################
 #Fullscreen = true
+#ResizableWindow = 1
 
 #WindowX = -1920
 #WindowY = 0
 #WindowX = 10
 WindowY = 30
-
 ShowConsole = 1
 
+#ShowImGuiDemo = 1
+
+###################################
+### Profiling
+###################################
 #r_showcpuprof = true
 #r_showgpuprof = true
+
+###################################
+### Render
+###################################
 #r_forceshaderrecompilation = true
 #r_showforwardtech = true
+#r_forceframesync = 1
 
-
+###################################
+### Vulkan config
+###################################
 #r_exitValidationLayer = false
 #r_enableValidationLayer = false
 
-#g_LoadScene = scenes/emissive.yaml
+###################################
+### Scenes
+###################################
+g_LoadScene = scenes/emissive.yaml
 #g_LoadScene = scenes/vkscene.yaml
 #g_LoadScene = scenes/sponza.yaml
-g_LoadScene = scenes/bistro.yaml
+#g_LoadScene = scenes/bistro.yaml
 #g_LoadScene = scenes/empty.yaml
 
