--- a/assets/scenes/Sponza.yaml
+++ b/assets/scenes/Sponza.yaml
@@ -1,5 +1,5 @@
 Environment:
-  Ambient: [0.0235294122, 0.0235294122, 0.0235294122]
+  Ambient: [0.011764706, 0.011764706, 0.011764706]
   Skybox:
     Front: textures/yokohama/posz.jpg
     Back: textures/yokohama/negz.jpg
@@ -19,15 +19,15 @@ RenderObjects:
     Name: Light
     Parent: 0
     TransformComponent:
-      Position: [58.5, 18, -1.5]
-      Rotation: [0, -91.5, 0]
+      Position: [68, 27.5, 7]
+      Rotation: [-17.5, 144, -64.5]
       Scale: [1, 1, 1]
     LightComponent:
-      Type: Point
-      Color: [0.862494409, 0.979865789, 0.749695957]
+      Type: Spot
+      Color: [0.8799004, 0.97315437, 0.7902797]
       Radius: 10000
       Compression: 10000
-      OuterCutoff: 26.5
+      OuterCutoff: 43.6
       Cutoff: 0
       ProjectShadows: true
   - RenderObject: 2
@@ -35,30 +35,30 @@ RenderObjects:
     Parent: 0
     TransformComponent:
       Position: [7.5, 12.5, 0]
-      Rotation: [6, 1, -83]
+      Rotation: [6, 1, -96]
       Scale: [1, 1, 1]
     LightComponent:
       Type: Directional
-      Color: [1, 0.907256424, 0.523489952]
+      Color: [0.6912752, 0.5712844, 0.27836585]
       Radius: 1000
       Compression: 1000
-      OuterCutoff: 0.800000012
+      OuterCutoff: 0.8
       Cutoff: 1
       ProjectShadows: true
   - RenderObject: 3
     Name: Light_3
     Parent: 0
     TransformComponent:
-      Position: [-19.5, 3.5, 0]
-      Rotation: [0, -26.5, 0]
+      Position: [73, 1, 0.5]
+      Rotation: [0, -222, -307]
       Scale: [1, 1, 1]
     LightComponent:
       Type: Spot
-      Color: [1, 0, 0]
+      Color: [0.16483924, 0.15404712, 0.20134228]
       Radius: 5000
       Compression: 5000
-      OuterCutoff: 55
-      Cutoff: 41.7999992
+      OuterCutoff: 54.1
+      Cutoff: 41.8
       ProjectShadows: true
   - RenderObject: 4
     Name: Sponza
@@ -69,3 +69,14 @@ RenderObjects:
       Scale: [10, 10, 10]
     MeshComponent:
       MeshAssetPath: models/sponza/sponza.gltf
+  - RenderObject: 5
+    Name: DefaultMainCamera
+    Parent: 0
+    TransformComponent:
+      Position: [0, 0, 0]
+      Rotation: [0, 0, 0]
+      Scale: [1, 1, 1]
+    CameraComponent:
+      Main: true
+      Position: [91.833725, 3.930302, -15.943142]
+      Rotation: [0.2166667, -10.674468, 0]
