--- a/assets/default.cfg
+++ b/assets/default.cfg
@@ -6,8 +6,8 @@
 #WindowHeight = 720
 #WindowWidth = 1600
 #WindowHeight = 900
-WindowWidth = 1920
-WindowHeight = 1080
+#WindowWidth = 1920
+#WindowHeight = 1080
 #WindowWidth = 2560
 #WindowHeight = 1440
 
@@ -43,14 +43,23 @@ ShowConsole = 1
 ### Vulkan config
 ###################################
 #r_exitValidationLayer = false
-#r_enableValidationLayer = false
+r_enableValidationLayer = false
 
 ###################################
 ### Scenes
 ###################################
-g_LoadScene = scenes/emissive.yaml
+#g_LoadScene = scenes/emissive.yaml
 #g_LoadScene = scenes/vkscene.yaml
-#g_LoadScene = scenes/sponza.yaml
+g_LoadScene = scenes/sponza.yaml
 #g_LoadScene = scenes/bistro.yaml
 #g_LoadScene = scenes/empty.yaml
+
+
+
+###################################
+### Render settings
+###################################
+r_ssaoRadius = 5.0
+r_ssaoBias = 1.87
+
 
